[package]
name = "lan-share"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rust-embed = { version = "8.0", features = ["axum"] }
mime_guess = "2.0"
local-ip-address = "0.6"
